--- a/package.json
+++ b/package.json
@@ -41,7 +41,11 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/user/opencodesync"
+    "url": "https://github.com/tctinh/opencode-sync"
+  },
+  "homepage": "https://github.com/tctinh/opencode-sync#readme",
+  "bugs": {
+    "url": "https://github.com/tctinh/opencode-sync/issues"
   },
   "engines": {
     "node": ">=18.0.0"
