--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,6 @@ jobs:
         with:
           node-version: '20.x'
           cache: 'npm'
-          registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
         run: npm ci
@@ -32,6 +31,11 @@ jobs:
 
       - name: Test CLI
         run: node dist/cli/index.js --help
+
+      - name: Configure npm for Trusted Publishing
+        run: |
+          echo "//registry.npmjs.org/:_authToken=" > ~/.npmrc
+          echo "registry=https://registry.npmjs.org/" >> ~/.npmrc
 
       - name: Publish to npm (Trusted Publishing)
         run: npm publish --provenance --access public
