feat: add plugin configs, skills sync, and blocklist filtering
- Add minimatch for glob pattern matching
- Sync plugin configs (*.jsonc, oh-my-opencode.json)
- Sync skills directory with symlink resolution
- Add blocklist to exclude temp/log files
- Display plugin and skill counts in status/push output
- Update README with new sync coverage

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,11 @@ jobs:
         run: node dist/cli/index.js --help
 
       - name: Publish to npm
-        run: npm publish --provenance --access public
+        uses: JS-DevTools/npm-publish@v3
+        with:
+          token: ${{ secrets.NPM_KEY }}
+          access: public
+          provenance: true
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
