--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,47 +4,74 @@ on:
   push:
     tags:
       - 'v*'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to release (e.g., 0.2.0)'
+        required: true
 
 jobs:
-  release:
+  build:
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: write
-      id-token: write
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: '20'
           cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
       - name: Build
-        run: npm run build
+        run: npm run compile:vscode
 
-      - name: Test CLI
-        run: node dist/cli/index.js --help
+      - name: Package Extension
+        run: npx vsce package
 
-      - name: Publish to npm
-        uses: JS-DevTools/npm-publish@v3
+      - name: Upload VSIX artifact
+        uses: actions/upload-artifact@v4
         with:
-          token: ${{ secrets.NPM_KEY }}
-          access: public
-          provenance: true
+          name: vsix
+          path: '*.vsix'
+
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download VSIX
+        uses: actions/download-artifact@v4
+        with:
+          name: vsix
+
+      - name: Publish to VS Code Marketplace
+        run: npx vsce publish --packagePath *.vsix
+        env:
+          VSCE_PAT: ${{ secrets.VSCE_PAT }}
+
+      - name: Publish to Open VSX
+        run: npx ovsx publish *.vsix
+        env:
+          OVSX_PAT: ${{ secrets.OVSX_PAT }}
+        continue-on-error: true
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Download VSIX
+        uses: actions/download-artifact@v4
+        with:
+          name: vsix
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
+          files: '*.vsix'
           generate_release_notes: true
-          files: |
-            README.md
-            CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
