--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,5 @@
-# Dependencies
 node_modules/
-
-# Build output
+out/
 dist/
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Logs
-*.log
-npm-debug.log*
-
-# Test coverage
-coverage/
-
-# Environment
-.env
-.env.local
+*.vsix
+.vscode-test/
