--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "opencodesync",
-  "version": "0.1.7",
-  "description": "Sync OpenCode settings and session contexts across devices via GitHub Gist",
+  "name": "coding-agent-sync",
+  "displayName": "Coding Agent Sync",
+  "version": "0.2.0",
+  "description": "Sync AI coding assistant configs (Claude Code, OpenCode, Codex) across devices via GitHub Gist",
+  "publisher": "tctinh",
   "type": "module",
-  "main": "./dist/plugin/index.js",
+  "main": "./out/extension.cjs",
   "types": "./dist/plugin/index.d.ts",
   "bin": {
+    "coding-agent-sync": "./dist/cli/index.js",
     "opencodesync": "./dist/cli/index.js"
   },
   "exports": {
@@ -17,38 +20,142 @@
       "import": "./dist/cli/index.js"
     }
   },
-  "files": [
-    "dist",
-    "README.md",
-    "LICENSE"
-  ],
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "clean": "rm -rf dist",
+    "clean": "rm -rf dist out",
     "prepublishOnly": "npm run clean && npm run build",
-    "cli": "node ./dist/cli/index.js"
+    "cli": "node ./dist/cli/index.js",
+    "vscode:prepublish": "npm run compile:vscode",
+    "compile:vscode": "webpack --config webpack.config.cjs --mode production",
+    "watch:vscode": "webpack --config webpack.config.cjs --mode development --watch",
+    "package": "vsce package"
   },
   "keywords": [
     "opencode",
+    "claude",
+    "claude-code",
+    "codex",
+    "ai",
     "sync",
     "settings",
+    "mcp",
     "gist",
     "cli",
-    "plugin"
+    "plugin",
+    "vscode"
   ],
-  "author": "",
+  "author": "tctinh",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tctinh/opencode-sync"
+    "url": "https://github.com/tctinh/coding-agent-sync"
   },
-  "homepage": "https://github.com/tctinh/opencode-sync#readme",
+  "homepage": "https://github.com/tctinh/coding-agent-sync#readme",
   "bugs": {
-    "url": "https://github.com/tctinh/opencode-sync/issues"
+    "url": "https://github.com/tctinh/coding-agent-sync/issues"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0",
+    "vscode": "^1.85.0"
+  },
+  "categories": ["Other", "Machine Learning"],
+  "activationEvents": [
+    "onView:codingAgentSyncExplorer",
+    "onCommand:codingAgentSync.push",
+    "onCommand:codingAgentSync.pull",
+    "onCommand:codingAgentSync.refresh",
+    "onCommand:codingAgentSync.connect",
+    "onCommand:codingAgentSync.disconnect"
+  ],
+  "contributes": {
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "codingAgentSyncContainer",
+          "title": "Coding Agent Sync",
+          "icon": "$(sync)"
+        }
+      ]
+    },
+    "views": {
+      "codingAgentSyncContainer": [
+        {
+          "id": "codingAgentSyncExplorer",
+          "name": "Configuration"
+        }
+      ]
+    },
+    "viewsWelcome": [
+      {
+        "view": "codingAgentSyncExplorer",
+        "contents": "Welcome to Coding Agent Sync!\n\nSync your AI coding assistant configurations across devices.\n\n[Connect to GitHub](command:codingAgentSync.connect)\n\nAfter connecting, you can push and pull your settings."
+      }
+    ],
+    "commands": [
+      {"command": "codingAgentSync.refresh", "title": "Refresh", "icon": "$(refresh)", "category": "Coding Agent Sync"},
+      {"command": "codingAgentSync.push", "title": "Push to Remote", "icon": "$(cloud-upload)", "category": "Coding Agent Sync"},
+      {"command": "codingAgentSync.pull", "title": "Pull from Remote", "icon": "$(cloud-download)", "category": "Coding Agent Sync"},
+      {"command": "codingAgentSync.connect", "title": "Connect GitHub", "icon": "$(plug)", "category": "Coding Agent Sync"},
+      {"command": "codingAgentSync.disconnect", "title": "Disconnect", "icon": "$(debug-disconnect)", "category": "Coding Agent Sync"},
+      {"command": "codingAgentSync.addMcpServer", "title": "Add MCP Server", "icon": "$(add)", "category": "Coding Agent Sync"},
+      {"command": "codingAgentSync.editMcpServer", "title": "Edit MCP Server", "icon": "$(edit)", "category": "Coding Agent Sync"},
+      {"command": "codingAgentSync.deleteMcpServer", "title": "Delete MCP Server", "icon": "$(trash)", "category": "Coding Agent Sync"},
+      {"command": "codingAgentSync.testMcpServer", "title": "Test MCP Server", "icon": "$(beaker)", "category": "Coding Agent Sync"},
+      {"command": "codingAgentSync.createSkill", "title": "Create Skill/Command", "icon": "$(new-file)", "category": "Coding Agent Sync"},
+      {"command": "codingAgentSync.editSkill", "title": "Edit Skill/Command", "icon": "$(edit)", "category": "Coding Agent Sync"},
+      {"command": "codingAgentSync.deleteSkill", "title": "Delete Skill/Command", "icon": "$(trash)", "category": "Coding Agent Sync"},
+      {"command": "codingAgentSync.openSettings", "title": "Open Settings", "icon": "$(settings-gear)", "category": "Coding Agent Sync"},
+      {"command": "codingAgentSync.openInEditor", "title": "Open in Editor", "icon": "$(go-to-file)", "category": "Coding Agent Sync"}
+    ],
+    "menus": {
+      "view/title": [
+        {"command": "codingAgentSync.push", "when": "view == codingAgentSyncExplorer", "group": "navigation@1"},
+        {"command": "codingAgentSync.pull", "when": "view == codingAgentSyncExplorer", "group": "navigation@2"},
+        {"command": "codingAgentSync.refresh", "when": "view == codingAgentSyncExplorer", "group": "navigation@3"}
+      ],
+      "view/item/context": [
+        {"command": "codingAgentSync.connect", "when": "view == codingAgentSyncExplorer && viewItem == syncStatus-disconnected", "group": "inline@1"},
+        {"command": "codingAgentSync.disconnect", "when": "view == codingAgentSyncExplorer && viewItem == syncStatus-connected", "group": "inline@1"},
+        {"command": "codingAgentSync.addMcpServer", "when": "view == codingAgentSyncExplorer && viewItem == mcpServers", "group": "inline@1"},
+        {"command": "codingAgentSync.editMcpServer", "when": "view == codingAgentSyncExplorer && viewItem == mcpServer", "group": "inline@1"},
+        {"command": "codingAgentSync.deleteMcpServer", "when": "view == codingAgentSyncExplorer && viewItem == mcpServer", "group": "inline@2"},
+        {"command": "codingAgentSync.createSkill", "when": "view == codingAgentSyncExplorer && viewItem =~ /skills|commands|agents|rules/", "group": "inline@1"},
+        {"command": "codingAgentSync.editSkill", "when": "view == codingAgentSyncExplorer && viewItem == skill", "group": "inline@1"},
+        {"command": "codingAgentSync.deleteSkill", "when": "view == codingAgentSyncExplorer && viewItem == skill", "group": "inline@2"},
+        {"command": "codingAgentSync.openSettings", "when": "view == codingAgentSyncExplorer && viewItem == settings", "group": "inline@1"},
+        {"command": "codingAgentSync.openInEditor", "when": "view == codingAgentSyncExplorer && viewItem =~ /skill|settings|config/", "group": "context@1"}
+      ]
+    },
+    "configuration": {
+      "title": "Coding Agent Sync",
+      "properties": {
+        "codingAgentSync.autoSync": {
+          "type": "boolean",
+          "default": false,
+          "description": "Automatically sync on config changes"
+        },
+        "codingAgentSync.syncInterval": {
+          "type": "number",
+          "default": 0,
+          "description": "Auto-sync interval in minutes (0 to disable)"
+        },
+        "codingAgentSync.showNotifications": {
+          "type": "boolean",
+          "default": true,
+          "description": "Show notifications for sync operations"
+        },
+        "codingAgentSync.enabledProviders": {
+          "type": "array",
+          "default": ["claude-code", "opencode"],
+          "items": {
+            "type": "string",
+            "enum": ["claude-code", "opencode", "codex"]
+          },
+          "description": "AI assistants to manage"
+        }
+      }
+    }
   },
   "dependencies": {
     "@octokit/rest": "^21.0.0",
@@ -60,7 +167,12 @@
   "devDependencies": {
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.11.0",
-    "typescript": "^5.3.0"
+    "@types/vscode": "^1.85.0",
+    "@vscode/vsce": "^2.22.0",
+    "ts-loader": "^9.5.0",
+    "typescript": "^5.3.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.0"
   },
   "peerDependencies": {
     "@opencode-ai/plugin": ">=0.1.0"
